--- a/src/app/sistema/vendas/pedidos-vendas/editar-pedido/editar-pedido.component.html
+++ b/src/app/sistema/vendas/pedidos-vendas/editar-pedido/editar-pedido.component.html
@@ -345,9 +345,10 @@
                 <th scope="col-1">Valor unitário</th>
                 <th scope="col-1">Desconto</th>
                 <th scope="col-1">Valor venda</th>
-                <th scope="col-1">Tipo de retirada</th>
-                <th scope="col-1">Data prev. da retirada</th>
+                <!-- <th scope="col-1">Tipo de retirada</th> -->
                 <th scope="col-1">Tipo de entrega</th>
+                <th scope="col-1" *ngIf="tipoEntregaVar=='retirada'">Previsão da retirada</th>
+                <th scope="col-1" *ngIf="tipoEntregaVar=='entrega'">Previsão da retirada</th>
                 <th scope="col-1">Endereço</th>
                 <th scope="col-1">Valor Frete</th>
               </tr>
@@ -364,24 +365,24 @@
                   <input currencyMask placeholder="R$" class="form-control form-control-sm" type="text" id="desconto" formControlName="desconto" (keyup)="changeDesconto(this.item.value)" (keyup)="cleanDesconto()" (keyup)="totalProduto(oneItem.value)" autocomplete="off">
                 </td>
                 <td>{{ oneItem.value.valorVenda | currency:'BRL' }}</td>
-                <td>
+                <!-- <td>
                   <select class="form-select form-select-sm" id="tipoRetirada" formControlName="tipoRetirada">
                     <option value="" disabled selected>Selecionar...</option>
                     <option value="tipo1">tipo 1</option>
                     <option value="tipo2">tipo 2</option>
                     <option value="tipo3">tipo 3</option>
                   </select>
-                </td>
-                <td>
-                  <input class="form-control form-control-sm" type="date" id="prevRetirada" formControlName="prevRetirada">
-                </td>
+                </td> -->
                 <!-- Tipo de entrega -->
                 <td class="row">
-                  <select #tipoEntrega class="col form-select form-select-sm" id="endereco" formControlName="tipoEntrega">
+                  <select #tipoEntrega (change)="changeTipoEntrega(tipoEntrega.value)" class="col form-select form-select-sm" id="endereco" formControlName="tipoEntrega">
                     <option value="" disabled selected>Selecionar...</option>
                     <option value="entrega">entrega</option>
                     <option value="retirada">retirada</option>
                   </select>
+                </td>
+                <td *ngIf="tipoEntregaVar=='entrega'||tipoEntregaVar=='retirada'">
+                  <input class="form-control form-control-sm" type="date" id="prevRetirada" formControlName="prevRetirada">
                 </td>
                 <td>
                   <input *ngIf="tipoEntrega.value=='retirada'" class="form-control form-control-sm" type="text" id="enderecoLoja" formControlName="enderecoLoja" placeholder="Endereco da loja">
