alterações pedido de compra e produtos estoque

--- a/src/app/sistema/estoque/produtos/produtos.component.html
+++ b/src/app/sistema/estoque/produtos/produtos.component.html
@@ -104,7 +104,7 @@
         <p>{{ produto.margemLucro }}%</p>
     </div>
     <div class="col-2 text-end">
-        <i class="fs-5 bi-eye-fill icon-view p-3" (click)="selectProduto(produto)" data-bs-toggle="modal" data-bs-target="#viewProdutos" cursor="pointer"></i>
+        <i class="fs-5 bi-eye-fill icon-view p-3" (click)="loadProdutoView(produto)" data-bs-toggle="modal" data-bs-target="#viewProdutos" cursor="pointer"></i>
     </div>
 </div>
 
