--- a/src/app/sistema/estoque/suprimentos/suprimentos.component.html
+++ b/src/app/sistema/estoque/suprimentos/suprimentos.component.html
@@ -84,7 +84,7 @@
     </div>
 </div>
 
-<app-adicionar-suprimentos></app-adicionar-suprimentos>
+<app-adicionar-suprimentos (reload)="getSuprimentos()"></app-adicionar-suprimentos>
 <app-view-suprimento></app-view-suprimento>
 <app-edit-fornecedor></app-edit-fornecedor>
 <app-edit-suprimento></app-edit-suprimento>
