--- a/src/app/sistema/estoque/produtos/adicionar-produtos/adicionar-produtos.component.html
+++ b/src/app/sistema/estoque/produtos/adicionar-produtos/adicionar-produtos.component.html
@@ -1,7 +1,7 @@
 <!-- Modal -->
 <div class="modal fade" id="adicionarProdutos" tabindex="-1" aria-labelledby="adicionarProdutosLabel" aria-hidden="true">
     <div class="modal-dialog modal-xl">
-        <form [formGroup]="fornecedorForm">
+        <form [formGroup]="produtoAddForm">
             <!-- Modal content -->
             <div class="modal-content rounded-15 bg-custom-light">
                 <div class="modal-header px-4">
@@ -395,9 +395,33 @@
                 formControlName="origem"
               >
                 <option selected disabled>Selecione uma origem</option>
-                <option value="origem1">origem1</option>
-                <option value="origem2">origem2</option>
-                <option value="origem3">origem3</option>
+                <option value="AC">AC</option>
+                <option value="AL">AL</option>
+                <option value="AP">AP</option>
+                <option value="AM">AM</option>
+                <option value="BA">BA</option>
+                <option value="CE">CE</option>
+                <option value="DF">DF</option>
+                <option value="ES">ES</option>
+                <option value="GO">GO</option>
+                <option value="MA">MA</option>
+                <option value="MT">MT</option>
+                <option value="MS">MS</option>
+                <option value="MG">MG</option>
+                <option value="PA">PA</option>
+                <option value="PB">PB</option>
+                <option value="PR">PR</option>
+                <option value="PE">PE</option>
+                <option value="PI">PI</option>
+                <option value="RJ">RJ</option>
+                <option value="RN">RN</option>
+                <option value="RS">RS</option>
+                <option value="RO">RO</option>
+                <option value="RR">RR</option>
+                <option value="SC">SC</option>
+                <option value="SP">SP</option>
+                <option value="SE">SE</option>
+                <option value="TO">TO</option>
               </select>
               <label class="ms-2 mt-3 small text-truncate text-custom-dark"
                 >Origem do produto conforme ICMS</label
@@ -541,27 +565,53 @@
             </div>
           </div>
 
-
           <!-- Cadastro de tabelas -->
           <div class="row pt-3 p-0 m-0 border-bottom pb-4 align-items-center">
             <div class="col-12 px-2 m-0 p-0">
-              <h5 class="fw-bold text-custom-dark m-0 p-0">Cadastro de tabelas</h5>
+              <h5 class="fw-bold text-custom-dark m-0 p-0">
+                Cadastro de tabelas
+              </h5>
             </div>
 
             <!-- tabela -->
-            <div class="col-2 px-2 pt-4 p-0 m-0 form-floating" *ngFor="let tabela of tabelas">
-              <input class="form-control form-control-lg px-4 py-3 rounded-15 shadow-sm" placeholder="Tabela" currencyMask value="R$0,00">
-              <label class="ms-2 mt-3 small text-truncate text-custom-dark">Tabela</label>
+            <div
+              class="col-2 px-2 pt-4 p-0 m-0 form-floating"
+              *ngFor="let tabela of tabelas"
+            >
+              <input
+                class="
+                  form-control form-control-lg
+                  px-4
+                  py-3
+                  rounded-15
+                  shadow-sm
+                "
+                placeholder="Tabela"
+                currencyMask
+                value="R$0,00"
+              />
+              <label class="ms-2 mt-3 small text-truncate text-custom-dark"
+                >Tabela</label
+              >
             </div>
 
             <div class="col-1 px-2 pt-4 p-0 m-0">
               <a class="px-2 py-2" (click)="adicionarTabela()">
-                <i class="bi-plus-square-fill icon-view my-auto fs-4 p-2 m-0 fw-bold text-custom-dark"></i>
+                <i
+                  class="
+                    bi-plus-square-fill
+                    icon-view
+                    my-auto
+                    fs-4
+                    p-2
+                    m-0
+                    fw-bold
+                    text-custom-dark
+                  "
+                ></i>
               </a>
             </div>
           </div>
-
-
         </div>
 
         <!-- Modal footer -->
