--- a/src/app/sistema/estoque/estoque-produtos/estoque-produtos.component.html
+++ b/src/app/sistema/estoque/estoque-produtos/estoque-produtos.component.html
@@ -11,16 +11,16 @@
         rounded-15
         shadow-sm
       " type="text" placeholder="Pesquisar" />
-        <a>
-            <i class="
-          bi-search
-          fs-4
-          position-absolute
-          translate-middle
-          top-50
-          me-4
-          end-0
-        "></i>
+        <a class="
+        fs-4
+        position-absolute
+        translate-middle
+        top-50
+        me-4
+        end-0
+        text-custom-dark
+      ">
+            <i class="bi-search"></i>
         </a>
     </div>
 
