--- a/src/app/sistema/estoque/produtos/view-produto/view-produto.component.html
+++ b/src/app/sistema/estoque/produtos/view-produto/view-produto.component.html
@@ -6,7 +6,7 @@
             <div class="modal-content rounded-15 bg-custom-light">
                 <div class="modal-header px-4">
                     <h5 class="modal-title text-custom-dark" id="viewProdutosLabel">
-                        Adicionar produto
+                        Vizualizar produto
                     </h5>
                     <button type="button" class="btn-close" #close data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
