--- a/src/app/sistema/estoque/suprimentos/view-suprimento/view-suprimento.component.html
+++ b/src/app/sistema/estoque/suprimentos/view-suprimento/view-suprimento.component.html
@@ -11,7 +11,7 @@
             <div class="modal-content rounded-15 bg-custom-light">
                 <div class="modal-header px-4">
                     <h5 class="modal-title text-custom-dark" id="viewSuprimentoLabel">
-                        Suprimento X
+                        Visualizar Suprimento
                     </h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
@@ -29,8 +29,26 @@
                       py-3
                       rounded-15
                       shadow-sm
-                    " type="text" placeholder="Nome" formControlName="name" />
-                                    <label class="ms-2 mt-3 small text-truncate text-custom-dark">Nome</label
+                    " type="text" placeholder="Nome" formControlName="nome" />
+                                    <label class="ms-2 mt-3 small text-truncate text-custom-dark">Fornecedor</label
+                  >
+                </div>
+                <div class="col-12 px-2 pt-4 p-0 m-0 form-floating">
+                  <input
+                    class="
+                      form-control
+                      h-limited-sm
+                      px-4
+                      py-3
+                      rounded-15
+                      shadow-sm
+                    "
+                    type="text"
+                    placeholder="Nome"
+                    formControlName="nome"
+                  />
+                  <label class="ms-2 mt-3 small text-truncate text-custom-dark"
+                    >Nome</label
                   >
                 </div>
                 <!-- Código -->
@@ -46,7 +64,7 @@
                     "
                     type="text"
                     placeholder="Código"
-                    formControlName="code"
+                    formControlName="codigo"
                   />
                   <label class="ms-2 mt-3 small text-truncate text-custom-dark"
                     >Código</label
@@ -65,7 +83,7 @@
                     "
                     type="text"
                     placeholder="Categoria"
-                    formControlName="category"
+                    formControlName="categoria"
                   />
                   <label class="ms-2 mt-3 small text-truncate text-custom-dark"
                     >Categoria</label
@@ -100,33 +118,20 @@
                   py-3
                   rounded-15
                   shadow-sm
-                " placeholder="Descrição" style="height: 150px" formControlName="description"></textarea>
+                " placeholder="Descrição" style="height: 150px" formControlName="descricao"></textarea>
                                     <label class="ms-2 mt-3 small text-truncate text-custom-dark">Descrição</label
               >
             </div>
           </div>
 
           <div class="row m-0 p-0">
-            <!-- Unidade de medida -->
-            <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
-              <input
-                class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm"
-                type="number"
-                placeholder="Unidade de medida"
-                formControlName="unit_metrics"
-              />
-              <label class="ms-2 mt-3 small text-truncate text-custom-dark"
-                >Unidade de medida</label
-              >
-            </div>
-
             <!-- Quantidade -->
             <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
               <input
                 class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm"
                 type="text"
                 placeholder="Quantidade"
-                formControlName="quantity"
+                formControlName="quantidade"
               />
               <label class="ms-2 mt-3 small text-truncate text-custom-dark"
                 >Quantidade</label
@@ -134,12 +139,12 @@
             </div>
 
             <!-- Preço de custo -->
-            <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
+            <div class="col-2 px-2 pt-4 p-0 m-0 form-floating">
               <input
                 class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm"
                 type="text"
                 placeholder="Preço de custo"
-                formControlName="cust_price"
+                formControlName="precoCusto"
               />
               <label class="ms-2 mt-3 small text-truncate text-custom-dark"
                 >Preço de custo</label
@@ -153,7 +158,7 @@
                 type="number"
                 min="0"
                 placeholder="Estoque atual"
-                formControlName="current_storage"
+                formControlName="estoqueAtual"
               />
               <label class="ms-2 mt-3 small text-truncate text-custom-dark"
                 >Estoque atual</label
@@ -167,7 +172,7 @@
                 type="number"
                 min="0"
                 placeholder="Estoque mínimo"
-                formControlName="minimum_storage"
+                formControlName="estoqueMin"
               />
               <label class="ms-2 mt-3 small text-truncate text-custom-dark"
                 >Estoque mínimo</label
@@ -198,55 +203,9 @@
                         <!-- Modal footer -->
                         <div class="row m-0 py-3 modal-footer">
                             <!-- Cancelar -->
-                            <div class="col-3 px-2 p-0 m-0 d-grid">
-                                <button data-bs-dismiss="modal" type="reset" class="
-                h-limited-sm
-                btn
-                rounded-15
-                py-1
-                px-4
-                bg-light
-                shadow-sm
-                text-start
-              ">
-              <h5
-                class="
-                  fw-normal
-                  my-auto
-                  text-truncate text-custom-dark text-center
-                "
-              >
-                Cancelar
-              </h5>
-            </button>
-                            </div>
-
-                            <!-- Salvar -->
-                            <div class="col-3 px-2 p-0 m-0 d-grid">
-                                <button type="submit" class="
-                h-limited-sm
-                btn
-                rounded-15
-                py-1
-                px-4
-                bg-custom-success
-                shadow-sm
-                text-start
-              ">
-              <h5
-                class="
-                  fw-normal
-                  my-auto
-                  text-truncate text-custom-dark text-center
-                "
-              >
-                Salvar
-              </h5>
-            </button>
-                            </div>
                         </div>
-                        <!-- /Modal footer -->
                     </div>
+                    <!-- /Modal footer -->
                     <!-- /Modal content -->
         </form>
         </div>
